# RustyVault

./: .gitignore  README.md  documentation.md  package-lock.json  package.json  todos.txt
migrations/2023-02-25-121719_create_todos_table/: down.sql  up.sql
migrations/2023-02-26-121344_create_todos_table/: down.sql  up.sql
migrations/2023-08-10-170854_fixed_vault/: down.sql  up.sql
src/: App.css  schema.rs  style.css
src-tauri/: Cargo.toml  store.sqlite  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto_process.rs  hash_etching.rs  key_store.rs  main.rs  schema.rs  user.rs  vault_access.rs
src-tauri/src/db/: init.rs  mod.rs  models.rs
src/components/AddVaultForm/: AddVaultForm.css  Addvaultform.css  Addvaultform.js
src/components/DeleteVaultForm/: DeleteVaultForm.css  Deletevaultform.css  Deletevaultform.js
src/components/EditVaultForm/: EditVaultForm.css  Editvaultform.css  Editvaultform.js
src/components/Sidebar/: Sidebar.css  Sidebar.js
src/components/VaultCard/: VaultCard.css  VaultCard.js
src/pages/: _app.jsx  homepage.jsx  index.jsx  register.jsx
src/pages/styles/: HomePage.css  homepage.css
